<resources>
    <string name="app_name">WhatsClone</string>
    <string name="action_settings">Settings</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome_to_whatsclone">Welcome to WhatsClone!</string>
    <string name="verification_code">Verification Code</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="logout">Logout</string>
    <string name="find_users">Find Users</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="test_sender">Test Sender</string>
    <string name="test_message">Test Message</string>
    <string name="send">Send</string>
    <string name="plus_sign">+</string>
    <string name="send_a_message">Send a message..</string>
    <string name="view_media">View Media</string>
</resources>
